--- a/css/Product_detail2D.css
+++ b/css/Product_detail2D.css
@@ -196,7 +196,7 @@ flex-direction: column;
     background: #00DCFF29;
     border-radius: 50px;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     overflow: hidden;
     margin: 0;
@@ -276,6 +276,10 @@ span.sold h3{
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
+}
+.size_color .color a {
+    width: 51px;
+    height: 51px;
 }
 .color h3{
     color: #d2cece;
@@ -444,12 +448,25 @@ a.color3 span{
     gap: 8px;
     width: calc((100% - 24px) /2);
  }
+ .slick-next{
+    background: rgba(0, 0, 0, 0.5);
+ }
  @media(max-width:1199px) and (min-width:1050px){
     .col_right .shipping span{
         width: 100%;
     }
  }
+
  @media(max-width:1024px){
+    .Product_detail .col_right{
+        display: none;
+    }
+    .Product_detail .col_left{
+        gap: 24px;
+    }
+    .col_right.core{
+        display: flex !important;
+    }
     .wrp_img_detail {
         width: 684px;
         display: flex;
@@ -463,8 +480,6 @@ a.color3 span{
         padding: 4px 67px;
     }
     .Product_detail .col_right{
-
-        position: absolute;
         left: 0;
         right: 0;
         top: 1005px;
@@ -520,9 +535,7 @@ a.color3 span{
         gap: unset;
         justify-content: space-between;
     }
-    .col_left .detail_row.par{
-        padding-top: 954px;
-    }
+   
     .color a:hover{
         border: unset;
         background: unset;
@@ -535,6 +548,9 @@ a.color3 span{
     .size_color .size{
         gap: 3px;
     }
+    .Product_detail{
+        margin-bottom: unset;
+    }
  }
  @media(max-width:821px){
   
@@ -544,9 +560,7 @@ a.color3 span{
     .col_right .shipping{
         display: none;
     }
-    .col_left .detail_row.par{
-        padding-top: 834px;
-    }
+   
     .collection .wrp .collection_items .Item{
         width: calc((100% - 48px) /3);
     }
@@ -558,9 +572,7 @@ a.color3 span{
     .Product_detail .col_right{
         top: 1208px;
     }
-    .col_left .detail_row.par{
-        padding-top: 736px;
-    }
+ 
     .col_right .size_color{
         flex-direction: column;
     }
@@ -574,7 +586,11 @@ a.color3 span{
  @media(max-width:431px){
     .Product_detail .col_left{
         width:100% ;
-        padding: 0 8px;
+    }
+    
+    .Product_detail .col_right{
+        padding: 12px;
+        gap: 12px;
     }
     .type a:hover{
         border: unset;
@@ -587,7 +603,7 @@ a.color3 span{
         flex-direction: column-reverse;
     }
     .Product_detail .wrp{
-        padding: unset !important;
+        padding: 12px !important;
     }
 
     .Product_detail .wrp .head .choose{
@@ -596,10 +612,7 @@ a.color3 span{
     .wrp_img_detail{
         width: 100%;
     }
-    .Product_detail .col_right{
-        top: 985px;
-        padding: 1px 30px 24px;
-    }
+    
     .col_right .size_color{
         flex-direction: column;
     }
@@ -630,12 +643,7 @@ a.color3 span{
     .top .head a{
         flex-direction: column;
     }
-    .top .head a span.hm{
-        padding:  5px 15px
-    }
-    .col_left .detail_row.par{
-        padding-top: 753px;
-    }
+  
     .Product_detail{
         margin-bottom: unset;
     }
@@ -654,12 +662,8 @@ a.color3 span{
  }
  @media(max-width:391px){
    
-    .Product_detail .col_left{
-        width: 390px;
-    }
-    .col_left .detail_row.par{
-        padding-top: 869px;
-    }
+  
+  
     .slick-slider .slick-track{
         gap: unset !important;
     }
@@ -669,9 +673,7 @@ a.color3 span{
     .buy_button a{
         padding: 5px 14px;
     }
-    .col_left .detail_row.par{
-        padding-top: 791px;
-    }
+  
     .Product_detail .col_right{
         top: 911px;
     }
