--- a/css/shop.css
+++ b/css/shop.css
@@ -135,6 +135,9 @@
     }
 }
 @media(max-width:431px){
+    .slider-nav.slick-initialized.slick-slider{
+        display: flex;
+    }
     .wrp .pro, .para{
         display: none;
     }
