--- a/css/shop.css
+++ b/css/shop.css
@@ -31,7 +31,7 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    padding: 12px 50px;
+    padding: 12px 30px;
     border-radius: 8px;
     background: #333333;
 
@@ -77,6 +77,12 @@
     width: 100%;
 }
 @media(max-width:1199px){
+    .collection.best_sell{
+        margin-bottom: unset;
+    }
+    .voucher{
+        margin-bottom: unset;
+    }
     .profile .wrp{
         width: unset;
         padding: 0 24px !important;
@@ -125,14 +131,10 @@
     .profile .wrp .pro {
         top: 329px;
     }
-    .tagss span{
-        padding: 12px 44px;
-    }
+
 }
 @media(max-width:769px){
-    .tagss span{
-        padding: 12px 46px;
-    }
+
 }
 @media(max-width:431px){
     .slider-nav.slick-initialized.slick-slider{
