--- a/css/Product_detail2D.css
+++ b/css/Product_detail2D.css
@@ -578,15 +578,13 @@ a.color3 span{
     .Product_detail .col_right{
         top: 1208px;
     }
-    .Product_detail .wrp .head{
-        align-items: center;
-    }
+
  
     .col_right .size_color{
         flex-direction: column;
     }
     .Product_detail .wrp .head{
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
     .Product_detail .wrp .head .choose{
         flex-direction: row;
