--- a/css/index1.css
+++ b/css/index1.css
@@ -67,6 +67,7 @@
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.3);
   height: auto;
   transform: scale(1);
+  left: -80px !important;
 }
 .container.inline {
   box-shadow: 0 7px 14px 0 rgba(65, 69, 88, 0.1),
