--- a/css/shop.css
+++ b/css/shop.css
@@ -10,7 +10,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    top: 528px;
+    top: 508px;
     border-radius: 40px 40px 0 0;
     padding: 40px 20px 24px;
     margin: 0;
@@ -21,6 +21,13 @@
 }
 .profile .wrp .para{
     width: 800px;
+}
+.profile .wrp .para h1{
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+    justify-content: center;
+    align-items: center;
 }
 .wrp .tagss{
     display: flex;
