--- a/css/Product_detail2D.css
+++ b/css/Product_detail2D.css
@@ -461,6 +461,9 @@ a.color3 span{
           justify-content: center   ;
         }
       }
+      .col_right.fake{
+        display: none;
+      }
  
  }
 
